@@ -17,7 +17,6 @@ import ru.tinkoff.invest.openapi.model.rest.MarketInstrument;
 
 import java.math.BigDecimal;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Slf4j
 @RequiredArgsConstructor
@@ -61,7 +60,7 @@ public class StatisticsServiceImpl implements StatisticsService {
         final List<Candle> candles = marketService.getCandles(ticker, interval, candleResolution);
 
         final MovingAverager averager = applicationContext.getBean(movingAverageType.getAveragerName(), MovingAverager.class);
-        final List<BigDecimal> openPrices = candles.stream().map(Candle::getOpenPrice).collect(Collectors.toList());
+        final List<BigDecimal> openPrices = candles.stream().map(Candle::getOpenPrice).toList();
         final List<BigDecimal> shortAverages = averager.getAverages(openPrices, smallWindow, ORDER);
         final List<BigDecimal> longAverages = averager.getAverages(openPrices, bigWindow, ORDER);
 
